# BaumWelchJax

./: .gitignore  README.md  experiment.ipynb  generation.py  inference.py  jit_wrapper.py  likelihood.ipynb  likelihood.py  likelihoods.py  logsumexp.py  pyproject.toml  sequence_sampling.py  test_algorithm.ipynb  test_forward_backward.ipynb  test_on_indicators.ipynb
notebooks/: example_forward_backward.ipynb  example_inference.ipynb  experiment.ipynb  plotting.py  prepare_test_data.ipynb  quickstart.ipynb  test_algorithm.ipynb  test_baum_welch_simple.ipynb  test_forward_backward.ipynb  test_likelihoods.ipynb
src/baum_welch_jax/: __init__.py  _precision.py
src/baum_welch_jax/algorithms/: __init__.py  baum_welch.py  forward_backward.py  generate.py  likelihoods.py
src/baum_welch_jax/models/: __init__.py  hmm.py  iteration_state.py
src/baum_welch_jax/util/: __init__.py  normalize.py  standardize_inputs.py
tests/: conftest.py  test_baum_welch.py  test_forward_backward.py  test_generation.py  test_hmm.py  test_likelihoods.py
