[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baum_welch_jax"
version = "0.1.1"
description = "Baum-Welch implementation using JAX"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tobias Heinzle", email = "tobias.heinzle@tum.de" }
]

dependencies = [
    "jax>=0.8.2",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda]>=0.8.2",
]

dev = [
    "pytest",
]

notebook = [
    "ipykernel",
    "matplotlib"
]

[project.urls]
Repository = "https://github.com/tobias-heinzle/BaumWelchJax"

[tool.pytest]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "debug: marks tests for debugging, select with '-m debug'"
]
[tool.hatch.build.targets.wheel]
packages = ["src/baum_welch_jax"]
